reorganize exposure nbs; display full workflow in main readme

--- a/notebooks/create-SLIIDERS-ECON/download-sliiders-econ-input-data.ipynb
+++ b/notebooks/create-SLIIDERS-ECON/download-sliiders-econ-input-data.ipynb
@@ -12,14 +12,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "517784ca-badd-41fe-a88c-7b4370260e5c",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import ssl\n",
+    "import urllib\n",
+    "\n",
     "import pandas as pd\n",
     "from pandas_datareader import wb as dr_wb\n",
-    "from sliiders.settings import PATH_EXPOSURE_LINCKE, PATH_EXPOSURE_WB_ICP"
+    "\n",
+    "from sliiders import settings as sset"
    ]
   },
   {
@@ -36,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "9cb05b93-c8cc-4f9e-9e99-ce5b7d511d16",
    "metadata": {},
    "outputs": [],
@@ -50,8 +54,8 @@
     "# data read-in\n",
     "lincke_hinkel_df = pd.read_csv(lincke_hinkel_cci_url)\n",
     "\n",
-    "# saving at PATH_EXPOSURE_LINCKE\n",
-    "lincke_hinkel_df.to_parquet(PATH_EXPOSURE_LINCKE)"
+    "# saving at sset.PATH_EXPOSURE_LINCKE\n",
+    "lincke_hinkel_df.to_parquet(sset.PATH_EXPOSURE_LINCKE)"
    ]
   },
   {
@@ -65,7 +69,22 @@
     "1. Use [this link](https://databank.worldbank.org/embed/ICP-2017-Cycle/id/4add74e?inf=n) to access WB ICP 2017 in table format.\n",
     "2. Upon entering the webpage, look to the upper right corner and click on the icon with downward arrow with an underline. This should prompt the download.\n",
     "3. When the download finishes, there should be a `.zip` file called `ICP 2017 Cycle.zip`. Access the `.csv` file whose name ends in `_Data.csv` (there should be two files in the `.zip` file, the other being a file whose name ends in `_Series - Metadata.csv`).\n",
-    "4. Save the said `.csv` file as `PATH_EXPOSURE_WB_ICP`."
+    "4. Save the said `.csv` file as `sset.PATH_EXPOSURE_WB_ICP`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "acd362ad-1783-411c-bf0c-d24bda294005",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Workaround for urllib request error\n",
+    "ssl._create_default_https_context = ssl._create_unverified_context\n",
+    "\n",
+    "URL_SRTM15 = \"https://topex.ucsd.edu/pub/srtm15_plus/SRTM15_V2.3.nc\"\n",
+    "\n",
+    "urllib.request.urlretrieve(URL_SRTM15, sset.PATH_SRTM15_PLUS)"
    ]
   }
  ],
