SRTM15+ update (keeping the Path as V2.3 due to dependencies issue)

--- a/notebooks/create-SLIIDERS-ECON/download-sliiders-econ-input-data.ipynb
+++ b/notebooks/create-SLIIDERS-ECON/download-sliiders-econ-input-data.ipynb
@@ -597,7 +597,7 @@
     "ssl._create_default_https_context = ssl._create_unverified_context\n",
     "URL_SRTM15 = \"https://topex.ucsd.edu/pub/srtm15_plus/SRTM15_V2.4.nc\"\n",
     "\n",
-    "urequest.urlretrieve(URL_SRTM15, sset.PATH_SRTM15_PLUS)"
+    "urequest.urlretrieve(URL_SRTM15, SRTM15PLUS_DIRECTORY / URL_SRTM15.split(\"/\")[-1])"
    ]
   },
   {
