updated paths and directories

--- a/notebooks/create-SLIIDERS-ECON/country_level_ypk/ypk1_prep_clean.ipynb
+++ b/notebooks/create-SLIIDERS-ECON/country_level_ypk/ypk1_prep_clean.ipynb
@@ -53,6 +53,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e8695ee9-d515-4bd2-a8ac-1bb25656cbcc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# creating necessary directory\n",
+    "os.makedirs(sset.DIR_YPK_INT, exist_ok=True)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "4d76358a",
    "metadata": {},
@@ -67,17 +78,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## original file format was excel spreadsheet, so we will read this as is\n",
-    "madd = pd.read_excel(sset.DIR_YPK_RAW / \"maddison_project.xlsx\")\n",
+    "# original file format was excel spreadsheet, so we will read this as is\n",
+    "madd = pd.read_excel(sset.PATH_MPD_RAW)\n",
     "\n",
-    "## population is in 1000s of people; we will save it to be in millions of people\n",
+    "# population is in 1000s of people; we will save it to be in millions of people\n",
     "madd[\"pop\"] = madd[\"pop\"] / 1000  ## divide by a thousand to get things in millions\n",
     "\n",
-    "## GDPpc is currently in ones of USD; we want gdp to be in millions of USD\n",
-    "## one USD per million people = 1 million USD per person\n",
+    "# GDPpc is currently in ones of USD; we want gdp to be in millions of USD\n",
+    "# one USD per million people = 1 million USD per person\n",
     "madd[\"gdp\"] = madd[\"gdppc\"] * madd[\"pop\"]\n",
     "\n",
-    "## indexing and exporting\n",
+    "# indexing and exporting\n",
     "madd.rename(columns={\"countrycode\": \"ccode\"}, inplace=True)\n",
     "madd[\"gdppc_unit\"] = \"ones of USD (constant 2011 PPP USD)\"\n",
     "madd[\"gdp_unit\"] = \"millions of USD (constant 2011 PPP USD)\"\n",
@@ -103,10 +114,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## importing data\n",
-    "un_df = pd.read_csv(sset.DIR_YPK_RAW / \"UN_WPP2019_TotalPopulation.csv\")\n",
+    "# importing data\n",
+    "un_df = pd.read_csv(sset.DIR_UN_WPP_RAW / \"UN_WPP2019_TotalPopulation.csv\")\n",
     "\n",
-    "## let's check whether there are any with \"dependencies\" considered together with sov.s\n",
+    "# let's check whether there are any with \"dependencies\" considered together with sov.s\n",
     "for i in set(un_df.Location):\n",
     "    if \"ependenc\" in i:\n",
     "        print(i)"
@@ -119,7 +130,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## very minor clean-up for iso country codes; initial\n",
+    "# very minor clean-up for iso country codes; initial\n",
     "countryname_to_iso = dict([])\n",
     "\n",
     "for i in list(set(un_df.Location)):\n",
@@ -134,9 +145,9 @@
     "    else:\n",
     "        countryname_to_iso[i] = None\n",
     "\n",
-    "## some mandotory clean-ups required\n",
-    "## Will not print them as there are too many, but can be checked via print command\n",
-    "## print(no_isos)\n",
+    "# some mandotory clean-ups required\n",
+    "# Will not print them as there are too many, but can be checked via print command\n",
+    "# print(no_isos)\n",
     "no_isos = [k for k, v in countryname_to_iso.items() if v is None]"
    ]
   },
@@ -147,7 +158,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## after examining the no_isos list, I conduct the following (manual) clean-up\n",
+    "# after examining the no_isos list, I conduct the following (manual) clean-up\n",
     "to_update = {\n",
     "    \"Micronesia (Fed. States of)\": \"FSM\",\n",
     "    \"State of Palestine\": \"PSE\",\n",
@@ -174,7 +185,7 @@
     "    \"Netherlands (and dependencies)\": \"NLD+D\",\n",
     "}\n",
     "\n",
-    "## updating the ISO codes\n",
+    "# updating the ISO codes\n",
     "countryname_to_iso.update(to_update)"
    ]
   },
@@ -195,14 +206,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## re-checking for clean-ups; again, this is too long a list to print\n",
+    "# re-checking for clean-ups; again, this is too long a list to print\n",
     "no_isos_2 = [k for k, v in countryname_to_iso.items() if v is None]\n",
     "\n",
-    "## the whole of no_isos_2 is \"WIDE\"\n",
+    "# the whole of no_isos_2 is \"WIDE\"\n",
     "for i, ctry in enumerate(no_isos_2):\n",
     "    countryname_to_iso[ctry] = \"WIDE\"\n",
     "\n",
-    "## applying the dictionary to get country codes (ISO)\n",
+    "# applying the dictionary to get country codes (ISO)\n",
     "un_df[\"ccode\"] = un_df.Location.map(countryname_to_iso)"
    ]
   },
@@ -221,7 +232,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.makedirs(sset.DIR_YPK_INT, exist_ok=True)\n",
     "un_df.rename(columns={\"Time\": \"year\"}, inplace=True)\n",
     "un_df.set_index([\"ccode\", \"year\"], inplace=True)\n",
     "un_df.to_parquet(sset.DIR_YPK_INT / \"un_population.parquet\")"
@@ -243,7 +253,7 @@
    "outputs": [],
    "source": [
     "## attaching country codes; first import un_pop information\n",
-    "by_age = pd.read_csv(sset.DIR_YPK_RAW / \"UN_WPP2019_Population_by_Age.csv\")\n",
+    "by_age = pd.read_csv(sset.DIR_UN_WPP_RAW / \"UN_WPP2019_Population_by_Age.csv\")\n",
     "\n",
     "## attaching the country codes\n",
     "un_df_dic = dict(zip(un_df.Location, un_df.index.get_level_values(\"ccode\")))\n",
